--- a/degit/ts-rollup/package.json
+++ b/degit/ts-rollup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lernib-template-ts",
+  "name": "lernib-template-ts-rollup",
   "version": "0.0.0",
   "private": true,
   "scripts": {
