--- a/degit/ts-types/package.json
+++ b/degit/ts-types/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "lernib-template-ts-server",
+  "name": "lernib-template-ts-types",
   "version": "0.0.0",
   "private": true,
+  "exports": {
+    ".": {
+      "types": "dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc",
-    "start": "nodemon src/index.ts",
     "lint": "eslint ."
   },
   "devDependencies": {
     "@tsconfig/node-lts": "^20.1.1",
-    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
   }
 }
